
 - Allowed 'portal_type' to be a method, as well as an attribute
   (eases ZClass-as-content).

 - Fixed to search form to pass 'created' instead of 'date' (probably
   need 'modified', too);  also, added selection list for 'Subject',
   and fixed the "Last Month" option value.

 - Fixed non-import in CMFCore/WorkflowCore.py (Tracker issue #239,
   thanks to 'snej' for the patch).

1.0 final (2001/03/29)

 - Removed embedded spaces in 'portal_status_message' strings
   (thanks to Dieter Maurer for pointing this out)

 - Added 'index_html' (copy/paste from CMFCore.PortalContent?!?) so
   that topics become directly publishable (thanks to Dieter
   Maurer for pointing this out).

 - Removed references to 'Images/' in skin DTML, adding an extra
   item to the default skins' lookup path. In CMFDefault/scripts
   you will find 'addImagesToSkinPaths.pys', a Python Script that
   adds the extra name to all your skin paths. (Tracker issue
   #205).

 - Added FSPythonScripts, allowing filesystem-based skins to
   expose customizable PythonScripts.

 - Fixed CMF Tracker item (207), "HTML test when editing a Portal
   Document is ambiguous".  Now, the same regular expression used
   to scoop out the contents of the <body> tags, which is case
   insensitive, is also used to detect whether the document may
   be HTML.

 - Converted physical path to string (Tracker #224).

 - Fixed 'Creator' metadata for DiscussionItems (tracker issue
   #206, thanks to Jeff Sasmor for the patch!).

 - Added simple search field for 'Subject' (Tracker #213).

 - Fixed CMF Tracker issue 211, "Topics have Folder icon" by
   finally moving the Topic icon into the skins, and writing a
   custom icon() method that uses getIcon (Subclassing from
   PortalFolder made this behavior strange).

 - Changed CMFDefault.Document__init__ to call self.edit at the
   end, instead of self._parse, which means that HTML can finally
   be passed into the constructor.  Unit tests verify that