@@ -14,6 +14,9 @@
  - Fixed non-import in CMFCore/WorkflowCore.py (Tracker issue #239,
    thanks to 'snej' for the patch).
 
+ - Updated CatalogTool to handle searchable vs. displayable DublinCore
+   dates properly.
+
 1.0 final (2001/03/29)
 
  - Removed embedded spaces in 'portal_status_message' strings
